Changes from LAB session

--- a/PSExampleApp/PSExampleApp/Resx/AppResources.nl.resx
+++ b/PSExampleApp/PSExampleApp/Resx/AppResources.nl.resx
@@ -265,7 +265,7 @@
     <value>Voer gebruikersnaam in</value>
   </data>
   <data name="ExampleAppTitle" xml:space="preserve">
-    <value>PS Example App</value>
+    <value>Hei App</value>
   </data>
   <data name="Found" xml:space="preserve">
     <value>Gevonden:</value>
