--- a/PSExampleApp/PSExampleApp/Resx/AppResources.resx
+++ b/PSExampleApp/PSExampleApp/Resx/AppResources.resx
@@ -271,7 +271,7 @@
     <value>Enter a username</value>
   </data>
   <data name="ExampleAppTitle" xml:space="preserve">
-    <value>PS Example App</value>
+    <value>Hei App</value>
   </data>
   <data name="Found" xml:space="preserve">
     <value>Found:</value>
